# stock_opinion_chatbot

./: .gitignore  pyproject.toml  report_crawler.ipynb
