[tool.poetry]
name = "stock-opinion-chatbot"
version = "0.1.0"
description = ""
authors = ["Songjae Lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pymongo = "^4.11.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
